--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,10 +29,14 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build
+        env:
+          DEPLOY_TARGET: gh-pages
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Create .nojekyll file
         run: touch out/.nojekyll
+      - name: Copy CNAME file
+        run: cp CNAME out/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
